<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".patient.PatientRegistration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/register_as_resident"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_below="@+id/textview6"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="0"
            android:max="100"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview6"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/primary"
                android:textColor="@color/black"
                android:inputType="text"
                android:hint="@string/enter_user_name"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="25dp"
                android:inputType="phone"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/primary"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_mobile_number"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/primary"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"/>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/primary"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                app:backgroundTint="@null"
                android:text="@string/register1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="20dp"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>