<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/registerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_as"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/selectedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:padding="1dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ok"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/primary"
            android:visibility="gone"
            app:cardCornerRadius="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:text="OK"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>


        <Spinner
            android:id="@+id/register"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerLL"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:background="@drawable/button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>

</RelativeLayout>